--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,7 +16,8 @@ packaging==25.0
 passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.22
-pydantic==2.11.7
+pydantic-settings>=2.0.0
+pydantic>=2.0.0
 pydantic_core==2.33.2
 pyotp==2.9.0
 python-jose==3.5.0
@@ -31,3 +32,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.34.3
 wrapt==1.17.2
+email-validator>=2.0.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
