inicio da configuracao mfa

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ pydantic-settings>=2.0.0
 pydantic>=2.0.0
 pydantic_core==2.33.2
 pyotp==2.9.0
+qrcode==7.4.2
 python-jose==3.5.0
 python-multipart==0.0.20
 rsa==4.9.1
